--- a/动态规划之斐波那契数列.md
+++ b/动态规划之斐波那契数列.md
@@ -35,7 +35,7 @@ public static int f2(int n) {
     return res;
 }
 ```
-## 利用矩阵乘法
+## 利用矩阵乘法加速
 
 如果递归式严格遵循:
 $$
@@ -201,6 +201,145 @@ $$
 		int[][] base = { { 1, 1 }, { 1, 0 } };
 		int[][] res = matrixPower(base, n - 2);
 		return res[0][0] + res[1][0];
+	}
+```
+
+### 变体
+
+#### 上楼梯：
+
+$$
+\begin{bmatrix}f(n) & f(n-1)\end{bmatrix}
+=
+\begin{bmatrix}f(n-1) & f(n-2)\end{bmatrix}
+\begin{bmatrix}
+1 & 1 \\
+1 & 0
+\end{bmatrix}
+=
+\begin{bmatrix}2 & 1\end{bmatrix}
+\begin{bmatrix}
+1 & 1 \\
+1 & 0
+\end{bmatrix}^{n-2}
+$$
+
+#### 生小牛:
+
+**题目：**成熟的母牛每年生1头小母牛，并且所有牛永远不会死。第一年有一只成熟的母牛，从第二年开始母牛开始生小母牛。每只小母牛三年后成熟又可以生小母牛。给定整数N，求N年后牛的数量。
+
+**分析：**
+
+1. 第N-1年的牛会毫无损失的活到第N年。
+
+2. 第N-3年出生的牛，到第N年恰好成为成熟的牛，这以后出生的牛在第N年都没有生育能力。这意味着在第N年，成熟的牛的数量就是第N-3年牛的数量，就是这一年生产小牛的数量。则有：
+
+$$
+c(n)=c(n-1)+c(n-3)
+$$
+
+$$
+其中, c(1)=1, c(2)=2, c(3)=3
+$$
+
+
+
+1. 暴力递归
+
+   ```java
+       public static int c1(int n) {
+   		if (n < 1) {
+   			return 0;
+   		}
+   		if (n == 1 || n == 2 || n == 3) {
+   			return n;
+   		}
+   		return c1(n - 1) + c1(n - 3);
+   	}
+   ```
+
+   
+
+2. O(N)
+
+   ```java
+   	public staic int c2(int n) {
+           if(n < 1) {
+               return 0;
+           }
+           if (n == 1 || n == 2 || n == 3) {
+   			return n;
+   		}
+           int res = 3;
+           int pre = 2;
+           int prepre = 1;
+           //临时变量用来保存pre和prepre
+           int tmp1 = 0;
+           int tmp2 = 0;
+           for(int i = 4; i <= n; i++) {
+               tmp1 = res;
+               tmp2 = pre;
+               res += prepre;
+               pre = tmp1;
+               prepre = tmp2;
+           }
+           return res;
+       }
+   ```
+
+   
+
+3. O(logN)
+
+先推矩阵：
+$$
+\begin{bmatrix}c(n) & c(n-1) & c(n-2)\end{bmatrix}
+=
+\begin{bmatrix}c(n-1) & c(n-2) & c(n-3)\end{bmatrix}
+\begin{bmatrix}
+a & b & c \\
+d & e & f \\
+g & h & i \\
+\end{bmatrix}
+$$
+将斐波那契数列前四项: c(1)=1, c(2)=2, c(3)=3, c(4)=4, c(5)=6代入，得到：
+$$
+\begin{bmatrix}
+a & b & c \\
+d & e & f \\
+g & h & i \\
+\end{bmatrix}
+=
+\begin{bmatrix}
+1 & 1 & 0 \\
+0 & 0 & 1 \\
+1 & 0 & 0 \\
+\end{bmatrix}
+$$
+当n>3时：
+$$
+\begin{bmatrix}c(n) & c(n-1) & c(n-2)\end{bmatrix}
+=
+\begin{bmatrix}c(3) & c(2) & c(1)\end{bmatrix}
+\begin{bmatrix}
+1 & 1 & 0 \\
+0 & 0 & 1 \\
+1 & 0 & 0 \\
+\end{bmatrix}^{n-3}
+$$
+代码如下：
+
+```java
+    public static int c3(int n) {
+		if (n < 1) {
+			return 0;
+		}
+		if (n == 1 || n == 2 || n == 3) {
+			return n;
+		}
+		int[][] base = { { 1, 1, 0 }, { 0, 0, 1 }, { 1, 0, 0 } };
+		int[][] res = matrixPower(base, n - 3);
+		return 3 * res[0][0] + 2 * res[1][0] + res[2][0];
 	}
 ```
 
