--- a/拓扑排序.md
+++ b/拓扑排序.md
@@ -96,6 +96,8 @@
 
    当考虑完某个顶点所有的出边后，将顶点放入栈中。（即DFS后，放入栈中。）
 
+   **注意：这样做利用栈达到了逆序的目的。**
+   
    最后栈顶的元素必然入度为0，将栈中元素逐个弹出，即为拓扑序。
 
 ```c
@@ -123,3 +125,15 @@ DFS(G,u)
     time = time + 1
 ```
 
+DFS还有另一种实现：
+
+思路：将邻接矩阵转换为逆邻接矩阵，即逆转图的所有边的方向。
+
+​	当DFS顶点x时，对每条有向边{x, y}。
+
+1. 若y是undiscovered，则以y为起点启动DFS。最后打印x。当然，对于拓扑顺序，y在x之前。
+2. 若y是discovered但未完成，则存在循环依赖，此图不是DAG。
+3. 若y是processed，则y会先于x被标识（！！！）。当然，对于拓扑顺序，y在x之前。（在DFS代码中，这一点不需要具体实现）
+
+
+思路理解：逆转了边的方向，因此所有y都是x的前置事件，因此x必须最后打印。
