--- a/优先级队列.md
+++ b/优先级队列.md
@@ -79,3 +79,74 @@ public class MaxPQ<Key extends Comparable<Key>>
 }
 ```
 
+
+
+Comparator实现：
+
+```java
+class MinPQ<E> {
+
+    private Object[] q;
+    private Comparator<? super E> cmp;
+    private int size;
+
+    public MinPQ(int maxSize, Comparator<? super E> cmp) {
+        q = new Object[maxSize+2];
+        this.cmp = cmp;
+    }
+
+    public void insert(E e) {
+        q[++size] = e;
+        swim(size);
+    }
+
+    public E delMin() {
+        Object minVal = q[1];
+        swap(1, size);
+        q[size] = null;
+        size--;
+        sink(1);
+        return (E) minVal;
+    }
+
+    public E peek() {
+        return (E)q[1];
+    }
+
+    private void swim(int k) {
+        while(k > 1 && larger(k / 2, k)) {
+            swap(k / 2, k);
+            k /= 2;
+        }
+    }
+
+    private void sink(int k) {
+        while(2 * k <= size) {
+            int j = 2 * k;
+            if(j < size && larger(j, j + 1)) {
+                j++;
+            }
+            if(!larger(k, j)) {
+                break;
+            }
+            swap(k, j);
+            k = j;
+        }
+    }
+
+    private boolean larger(int i, int j) {
+        return cmp.compare((E) q[i], (E) q[j]) > 0;
+    }
+
+    private void swap(int i, int j) {
+        Object temp = q[i];
+        q[i] = q[j];
+        q[j] = temp;
+    }
+
+    private int size() {
+        return this.size;
+    }
+}
+```
+
