--- a/红黑树和2-3树.md
+++ b/红黑树和2-3树.md
@@ -12,7 +12,7 @@
 
 既然红黑树只是对2-3树的模拟，那么先要懂得2-3树。
 
-## 2-3树
+## 2-3树定义和插入
 
 ### 节点类型和树的定义
 
@@ -34,7 +34,7 @@
 
 
 
-### 插入node
+### 插入
 
 #### 将key插入2-node
 
@@ -71,11 +71,11 @@
 
 > **Proposition F.** Search and insert operations in a 2-3 tree with *N* keys are guaranteed to visit at most log *N* nodes. 
 >
-> **Proof:** The height of an *N*-node 2-3 tree is between ⎣log3 *N*⎦ = ⎣(log *N*)/(log 3)⎦ (if the tree is all 3-nodes) and ⎣log *N*⎦ (if the tree is all 2-nodes). 
+> **Proof:** The height of an *N*-node 2-3 tree is between ⎣log3 *N*⎦ = ⎣(log *N*)/(log 3)⎦ (if the tree is all 3-nodes) and  ⎣log2 *N*⎦ = ⎣(log *N*)/(log 2)⎦(if the tree is all 2-nodes). 
 
 
 
-## 红黑树
+## 红黑树定义和插入
 
 ### 在红黑树中表示3-node
 
@@ -150,9 +150,14 @@ private class Node
 
 
 
-### 旋转
+### 维护树平衡的操作
 
-分为左旋和右旋2种。
+1. 旋转（被旋转的边是red link，旋转后不改变黑高度）
+2. 翻转颜色（前提条件是2个孩子节点颜色相同且和父节点不一样，此操作改变黑高度）
+
+#### 旋转
+
+分为左旋和右旋2种。（2个节点，3棵子树）
 
 返回父节点的link旋转后应该指向的节点。
 
@@ -184,7 +189,7 @@ Node rotateRight(Node h)
 
 旋转的意义：维护了BST顺序性和黑平衡性。接下来，在插入的过程中，可以通过旋转纠正插入key后导致的连续red link和右倾斜 red link。
 
-### 翻转颜色
+#### 翻转颜色
 
 这里插播一个概念：翻转颜色。当某个节点的左右孩子节点同时为红色时，违反红黑树的定义，翻转孩子节点及当前节点的颜色。
 
@@ -205,28 +210,29 @@ void flipColors(Node h)
 
 #### 插入2-node
 
-##### 既是叶子节点，也是根节点
+##### 既是叶子节点，也是根节点（刚开始的时候会出现）
 
 1. 插入到右子树，出现右倾斜red link，左旋。
 2. 插入到左子树。
 
 结果：2-node变成了3-node。
 
-##### 是叶子节点，不是根节点
+##### 是叶子节点，不是根节点（一般情况）
 
 同理。
 
 #### 插入3-node
 
-1. 插入值大于2个key。翻转颜色。
-2. 插入值小于2个key。左旋第二个key，翻转颜色。
-3. 插入值在2个key之间。右旋第一个key，左旋第二个key，翻转颜色。
+1. 插入值大于2个key。2条link翻转颜色。
+2. 插入值小于2个key。左旋第二个key，2条link翻转颜色。
+3. 插入值在2个key之间。左旋第一个key，右旋第二个key，2条link翻转颜色。
+4. 第2，3两点中提到的第几个key，说的是大小顺序。旋转的目的总是令4-node的中间的key上升到父节点。
 
-#### 将red link传递到树的上层
+#### 将red link传递到树的上层(也是为了维持黑高度)
 
 每次插入3-node必定翻转颜色，**将red link传递给父节点，相当于为父节点增加了一个新的子节点**。
 
-这一点非常重要，从调整红黑树的角度，它将2-3树中的直接插入和上移统一到了增加一个新的子节点这个概念里。
+这一点非常重要，从调整红黑树的角度，它**将2-3树中的直接插入和上移统一到了增加一个新的子节点这个概念里。**
 
 #### 保持根节点为black
 
@@ -301,6 +307,7 @@ class RedBlackBST {
         root.color = BLACK;
     }
     
+    //插入指定根节点的树并返回新的根节点
     public Node put(Node h, int key) {
         if(h == null) {
             return new Node(key, RED, 1);
@@ -387,6 +394,151 @@ class RedBlackBST {
     }
 }
 ```
+
+
+
+## 2-3树删除
+
+### 删除最值（以最小值为例）
+
+**观察：**
+
+1. 最小值肯定是最低层的最左节点。
+2. 若被删除节点是3-node，直接删除即可。
+3. **若被删除节点是2-node，删除后破坏平衡。**
+
+**重要结论：** 为了被删除的节点不是2-node，所以我们必须保证当前遍历节点不是2-node(可以是3-node或临时的4-node)。
+
+1. **根节点调整规则：**
+
+   1. 若根节点和2个孩子都是2-node，将3个2-node合并成1个4-node。
+   2. 否则，在有需要的情况下，向右孩子借一个最小key，从而保证左孩子不是2-node。
+
+2. **顺着左链接向下查找最小值过程中，调整节点的规则**：
+
+   1. 若左孩子为不是2-node，不变。
+
+   2. 若左孩子是2-node，右孩子不是2-node，左孩子借右孩子最小key（向父节点借最小key组成3-node，右孩子最小key往父节点补位）。
+
+   3. 若左孩子是2-node，右孩子是2-node，左孩子借右孩子的唯一key和父节点最小key(父节点的最小key和右孩子的唯一key和左孩子节点组成4-node)。
+
+3. 直到底部，最小值所在节点一定是3-node或4-node，直接删除最小值即可。
+
+4. 向上调整，拆分无用的4-node。
+
+
+
+### 删除指定值
+
+1. 向下查找。
+2. 若指定值在底部节点，直接删除。
+3. 若指定值不在底部节点，**将指定值和直接后继交换**，当前节点不是2-node，**问题转换为删除根节点不是2-node的红黑树的最小值**。
+4. 最后向上调整，拆分无用的4-node，修复右倾，翻转颜色。
+
+
+
+## 红黑树删除
+
+**说明**：4-node在红黑树中的表示，3个节点组成的红黑树，子节点与父节点以red links相连。
+
+**注意**：和2-3树的最大不同，红黑树中向下查找时，先将根节点染红，表明根节点是虚拟3-node的最小key。
+
+### 删除最小值
+
+1. 一开始将根节点染红。
+2. 当前节点是3-node的最小key所在节点，
+3. 若左孩子的左孩子是红节点（左孩子不是2-node），继续检查左孩子。
+4. 若左孩子的左孩子是黑节点（左孩子是2-node），右孩子的左孩子是黑节点（右孩子是2-node），翻转当前节点和兄弟节点的颜色（为了不破坏黑高度），三者组成4-nodes(左孩子借右孩子唯一key和父节点最小key，共同组成4-node)，继续检查左孩子。
+5. 若左孩子的左孩子是黑节点（左孩子是2-node），右孩子的左孩子是红节点（右孩子是3-node），翻转当前节点和兄弟节点的颜色（左孩子和父节点用red link相连，相当于2-3树将父节点最小key和左孩子组成3-node），右孩子右旋（右孩子3-node的最小key到父节点补位的第一次上升），自己左旋（右孩子3-node的最小key到父节点补位成功，继续检查左孩子。
+6. 若左孩子是null，说明当前节点要被删除，返回null。
+7. 回溯过程中，向上调整，拆分无用的4-node，修复右倾，翻转颜色。
+
+```java
+private Node moveRedLeft(Node h) { 
+    // Assuming that h is red and both h.left and h.left.left
+ 	// are black, make h.left or one of its children red.
+     flipColors(h);
+     if (isRed(h.right.left)) {
+         h.right = rotateRight(h.right);
+         h = rotateLeft(h);
+     }
+     return h;
+ }
+ public void deleteMin() {
+     if (!isRed(root.left) && !isRed(root.right)) {
+         root.color = RED;
+     }
+     root = deleteMin(root);
+     if (!isEmpty()) {
+         root.color = BLACK;
+     }
+ }
+ private Node deleteMin(Node h) {
+     if (h.left == null) {
+         return null;
+     }
+     if (!isRed(h.left) && !isRed(h.left.left)) {
+         h = moveRedLeft(h);
+     }
+     h.left = deleteMin(h.left);
+     return balance(h);
+ }
+```
+
+
+
+### 删除最大值
+
+1. 一开始将根节点染红。
+2. 是删除最小值的镜像操作，但需要注意略有不同。
+3. **注意**：若当前节点的左孩子是红节点（即当前节点是3-node），镜像操作：若右孩子的左孩子是黑节点（右孩子是2-node），由于红黑树和2-3树的差异：**红黑树中3-node的中孩子和右孩子不在同一高度**，所以无法直接复现2-3树中右孩子向左孩子借key，**为了让他们在同一高度，我们可以右旋当前节点**，虽然导致了red link右倾，但是可以在回溯中修复。
+4. 若当前节点的左孩子是红节点（即当前节点是3-node），右旋（当前节点将变为原来的左孩子）；然后若右孩子不是红节点和右孩子的左孩子不是红节点（即右旋了或右孩子不是2-node），继续检查右孩子（这种情况的右旋是因为未知左孩子是不是3-node）。
+5. 若当前节点的左孩子是红节点（即当前节点是3-node），右旋（当前节点将变为原来的左孩子）；然后若右孩子不是红节点和右孩子的左孩子不是红节点（即没有右旋和右孩子是2-node），翻转颜色（为了右旋而不破坏黑高度）；若左孩子的左孩子是红节点（左孩子是3-node），右旋（当前节点变化原来的右孩子：相当于右孩子补位父节点，父节点和左孩子组成3-node），继续检查右孩子（可以留意到新形成的3-node的red link右倾，后面可以省一次右旋）。
+6. 若当前节点的左孩子是红节点（即当前节点是3-node），右旋（当前节点将变为原来的左孩子）；然后若右孩子不是红节点和右孩子的左孩子不是红节点（即没有右旋和右孩子是2-node），翻转颜色（为了右旋而不破坏黑高度）；若左孩子的左孩子不是红节点（左孩子是2-node，这种情况下，前面的翻转颜色相当于将当前节点和左右孩子合成4-node），继续检查右孩子（**红黑树中4-node的最右边2个孩子在同一高度**）。
+7. 若左孩子的左孩子是红节点（左孩子是3-node），右旋（当前节点变化原来的右孩子：相当于右孩子补位父节点，父节点和左孩子组成3-node），继续检查右孩子（可以留意到新形成的3-node的red link右倾，后面可以省一次右旋）。
+8. 若右孩子是null，说明当前节点被删除，返回null。
+9. 回溯过程中，拆分无用的4-node，修复右倾，翻转颜色。
+
+```java
+private Node moveRedRight(Node h) { 
+    // Assuming that h is red and both h.right and h.right.left
+    // are black, make h.right or one of its children red.
+     flipColors(h)
+     if (!isRed(h.left.left)) {
+         h = rotateRight(h);
+     }
+     return h;
+ }
+ public void deleteMax() {
+     if (!isRed(root.left) && !isRed(root.right)) {
+         root.color = RED;
+     }
+     root = deleteMax(root);
+     if (!isEmpty()) {
+         root.color = BLACK;
+     }
+ }
+ private Node deleteMax(Node h)
+ {
+     if (isRed(h.left)) {
+         h = rotateRight(h);
+     }
+     if (h.right == null) {
+         return null;
+     }
+     if (!isRed(h.right) && !isRed(h.right.left)) {
+         h = moveRedRight(h);
+     }
+     h.right = deleteMax(h.right);
+     return balance(h);
+ }
+```
+
+
+
+### 删除最值
+
+
 
 
 
