--- a/红黑树和2-3树.md
+++ b/红黑树和2-3树.md
@@ -196,9 +196,10 @@ Node rotateRight(Node h)
 ```java
 void flipColors(Node h)
 {
-     h.color = RED;
-     h.left.color = BLACK;
-     h.right.color = BLACK;
+    boolean newColor = h.color == RED ? BLACK : RED;
+     h.color = newColor;
+     h.left.color = !newColor;
+     h.right.color = !newColor;
 }
 ```
 
@@ -410,10 +411,9 @@ class RedBlackBST {
 **重要结论：** 为了被删除的节点不是2-node，所以我们必须保证当前遍历节点不是2-node(可以是3-node或临时的4-node)。
 
 1. **根节点调整规则：**
-
-   1. 若根节点和2个孩子都是2-node，将3个2-node合并成1个4-node。
+1. 若根节点和2个孩子都是2-node，将3个2-node合并成1个4-node。
    2. 否则，在有需要的情况下，向右孩子借一个最小key，从而保证左孩子不是2-node。
-
+   
 2. **顺着左链接向下查找最小值过程中，调整节点的规则**：
 
    1. 若左孩子为不是2-node，不变。
@@ -430,7 +430,7 @@ class RedBlackBST {
 
 ### 删除指定值
 
-1. 向下查找。
+1. 向下查找指定值。
 2. 若指定值在底部节点，直接删除。
 3. 若指定值不在底部节点，**将指定值和直接后继交换**，当前节点不是2-node，**问题转换为删除根节点不是2-node的红黑树的最小值**。
 4. 最后向上调整，拆分无用的4-node，修复右倾，翻转颜色。
@@ -465,6 +465,9 @@ private Node moveRedLeft(Node h) {
      return h;
  }
  public void deleteMin() {
+     if(root == null) {
+         return;
+     }
      if (!isRed(root.left) && !isRed(root.right)) {
          root.color = RED;
      }
@@ -510,6 +513,9 @@ private Node moveRedRight(Node h) {
      return h;
  }
  public void deleteMax() {
+     if(root == null) {
+         return;
+     }
      if (!isRed(root.left) && !isRed(root.right)) {
          root.color = RED;
      }
@@ -536,9 +542,53 @@ private Node moveRedRight(Node h) {
 
 
 
-### 删除最值
+### 删除指定值
 
+1. 染红根节点。
+2. 若指定值小于当前值，使用删除最小值的调整方法使下一节点不是2-node。
+3. 若指定值大于当前值，使用删除最大值的调整方法使下一节点不是2-node。
+4. 若指定值是指定值，用当前值的直接前继（中序遍历的前继）替换当前值，然后删除当前节点的右子树的最小值。
 
+```java
+public void delete(Key key) {
+     if (!isRed(root.left) && !isRed(root.right)) {
+         root.color = RED;
+     }
+     root = delete(root, key);
+     if (!isEmpty()) {
+         root.color = BLACK;
+     }
+}
+private Node delete(Node h, Key key) {
+    if(h == null) {
+        return null;
+    }
+    if (key.compareTo(h.key) < 0) {
+        if (!isRed(h.left) && !isRed(h.left.left)) {
+            h = moveRedLeft(h);
+        }
+        h.left = delete(h.left, key);
+    } else {
+        if (isRed(h.left)) {
+            h = rotateRight(h);
+        }
+        if (key.compareTo(h.key) == 0 && (h.right == null)) {
+            return null;
+        }
+        if (!isRed(h.right) && !isRed(h.right.left)) {
+            h = moveRedRight(h);
+        }
+        if (key.compareTo(h.key) == 0) {
+            h.val = get(h.right, min(h.right).key);
+            h.key = min(h.right).key;
+            h.right = deleteMin(h.right);
+        } else {
+            h.right = delete(h.right, key);
+        }
+     }
+     return balance(h);
+}
+```
 
 
 
