--- a/静待解决.md
+++ b/静待解决.md
@@ -1,5 +1,11 @@
-*   139 Word Break
-*   215 快速选择（不是快排）
-*   581
-*   
+* 139 Word Break
+
+* 215 快速选择（不是快排）
+
+* 581
+
+* 56. Merge Intervals
+
+  
+   
 
