top interview medium

--- a/拓扑排序.md
+++ b/拓扑排序.md
@@ -135,5 +135,8 @@ DFS还有另一种实现：
 2. 若y是discovered但未完成，则存在循环依赖，此图不是DAG。
 3. 若y是processed，则y会先于x被标识（！！！）。当然，对于拓扑顺序，y在x之前。（在DFS代码中，这一点不需要具体实现）
 
-
 思路理解：逆转了边的方向，因此所有y都是x的前置事件，因此x必须最后打印。
+
+## 实习
+
+Kahn算法和第一种DFS可以参考Course Schedule或Course Schedule II。
