work hard everyday

--- a/红黑树和2-3树.md
+++ b/红黑树和2-3树.md
@@ -225,7 +225,7 @@ void flipColors(Node h)
 #### 插入3-node
 
 1. 插入值大于2个key。2条link翻转颜色。
-2. 插入值小于2个key。左旋第二个key，2条link翻转颜色。
+2. 插入值小于2个key。右旋第二个key，2条link翻转颜色。
 3. 插入值在2个key之间。左旋第一个key，右旋第二个key，2条link翻转颜色。
 4. 第2，3两点中提到的第几个key，说的是大小顺序。旋转的目的总是令4-node的中间的key上升到父节点。
 
